--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
+/* App.css */
+
+/* Center content */
+.center-content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  /* height: 100vh; */
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Styling the table */
+.table-users {
+  margin: 0 auto; /* Center table */
+  border-collapse: collapse;
+  width: 80%; /* Adjust based on preference */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.table-users, .table-users th, .table-users td {
+  border: 1px solid #ddd;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Dark header style */
+.table-users thead {
+  background-color: #333;
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table-users th, .table-users td {
+  padding: 8px;
+  text-align: left;
 }
